@@ -1,3 +1,7 @@
+2005-09-29  Sam Steingold  <sds@gnu.org>
+
+	* spvw_debug.d (nobject_out1): handle Foreign-Address
+
 2005-09-28  Sam Steingold  <sds@gnu.org>
 
 	* modules/clx/new-clx/demos/sokoban.lisp (sokoban-usage): renamed
